@@ -346,6 +346,7 @@ t/433_cancel_gocr.t
 t/434_gocr_with_error.t
 t/51_process_chain.t
 t/52_process_chain_udt.t
+t/53_process_chain.t
 t/65_imageview.t
 t/6_PageRange.t
 t/7_Canvas.t
